# SchrodingersSketchbook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SCIENCE.md  copy_assets.cmake
src/: Config.hpp  main.cpp
src/core/: App.cpp  App.hpp  UI.hpp
src/quantum/: Simulation.cpp  Simulation.hpp
src/render/: Renderer.cpp  Renderer.hpp
